# Ludoxel

./: .gitignore  MANIFEST.in  NOTICE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  src_code_blocks.txt
application/ports/: rendererPort.py
application/session/: fixedStepRunner.py  sessionManager.py  sessionSettings.py
configs/: othello_opening_book.json  player_state.json  world_state.json
core/geometry/: aabb.py  intersection.py  ray.py
core/grid/: dda.py
core/math/: mat4.py  quaternion.py  vec3.py  viewAngles.py
domain/blocks/: blockDefinition.py  blockRegistry.py  runtimeModels.py  stateCodec.py
domain/config/: collisionParams.py  movementParams.py  testMapParams.py
domain/entities/: playerEntity.py
domain/systems/: buildSystem.py  collisionSystem.py  movementSystem.py
domain/world/: worldState.py
infrastructure/persistence/: appStateStore.py  jsonFileStore.py
infrastructure/platform/: qtInputAdapter.py
presentation/config/: gameLoopParams.py  pauseOverlayParams.py
presentation/screens/: gameScreen.py
presentation/theme/: main.qss
presentation/widgets/: crosshairWidget.py  glViewportWidget.py  hudWidget.py  inventoryOverlay.py  itemPhotoProvider.py  pauseOverlay.py
presentation/windows/: mainWindow.py
scripts/: build_native_extensions.py  build_windows_exe.py  reset_build_artifacts.py
src/ludoxel/: __main__.py
src/ludoxel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: bracket_group_reflow.py  convert_ogg_to_wav.py  export_project_file_paths.py  export_src_code_blocks.py  source_rewriter.py
(+767 files in other folders)
