# FILE: pyproject.toml
[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "maiming"
dynamic = ["version"]
description = "Deterministic Bedrock-movement sandbox and OpenGL 3.3 instanced voxel renderer for block-accurate Minecraft PvP aiming studies."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]

keywords = [
    "minecraft",
    "pvp",
    "aim",
    "simulation",
    "opengl",
    "voxel",
    "shadow-map",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "PyQt6>=6.6,<7",
    "numpy>=1.26,<3",
    "PyOpenGL>=3.1.7,<4",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
]

[project.scripts]
maiming = "maiming.api.run:run_app"

[tool.hatch.version]
path = "src/maiming/meta/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/maiming"]

[tool.hatch.build.targets.sdist]
include = [
    "src/maiming/**",
    "assets/**",
    "main.py",
    "README.md",
    "pyproject.toml",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py313"